Fixed alignment, responsiveness across laptop/desktop screen sizes

--- a/farmFrame/static/style.css
+++ b/farmFrame/static/style.css
@@ -28,12 +28,6 @@ nav {
   text-align: center;
   width: 100%;
   height: 50px;
-  background-color: var(--cobalt);
-}
-
-select {
-  background-color: var(--slate);
-  color: var(--alabaster);
 }
 
 #title {
@@ -55,6 +49,8 @@ select {
 /* Card Styling */
 
 .card {
+  display: flex;
+  flex-direction: column;
   background: rgba(61, 52, 139, 0.4);
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
@@ -62,34 +58,45 @@ select {
   padding: 10px;
   margin: 10px;
   animation: fadeIn 1.5s;
+  border-radius: 5px;
 }
 
 .card p {
   margin: 10px;
 }
 
+
+/* Form styling */
+
+#searchForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+
 /* Searchbar styling */
 
 .textEntry {
   width: 80%;
   margin: 10px;
+  text-align: center;
   border-radius: 5px;
   border-color: var(--slate);
   padding: 12px 24px;
   background-color: transparent;
   transition: transform 250ms ease-in-out;
+  align-self: center;
   font-size: 14px;
   line-height: 18px;
   color: var(--alabaster);
   background-color: transparent;
   background-size: 18px 18px;
   background-position: 95% center;
-  border-radius: 5px;
-  border: 1px solid var(--alabaster);
-  transition: all 250ms ease-in-out;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  transform-style: preserve-3d;
+  outline: 0;
+  border: 1px solid transparent;
+  border-bottom: 1px solid var(--alabaster);
+  border-radius: 0;
 }
 
 .textEntry::placeholder {
@@ -98,15 +105,7 @@ select {
   letter-spacing: 1.5px;
 }
 
-.textEntry:hover,
-.textEntry:focus {
-  /* padding: 12px 0; */
-  outline: 0;
-  border: 1px solid transparent;
-  border-bottom: 1px solid var(--alabaster);
-  border-radius: 0;
-  /* background-position: 100% center; */
-}
+
 
 /* Loader style/ Animation */
 
